force-app/main/default/objects/blng__Invoice__c/fields/blng__DebitPayments__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitPayments__c</fullName>
    <inlineHelpText>Somme de toutes les allocations et désallocations de paiements contre les notes de débit allouées à cette facture.</inlineHelpText>
    <label>Debit Payments</label>
    <summarizedField>blng__InvoiceLine__c.blng__DebitPayments__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>