force-app/main/default/objects/blng__Invoice__c/fields/blng__Debits__c.field-meta.xml
<CustomField>
    <fullName>blng__Debits__c</fullName>
    <inlineHelpText>Somme de tous les montants de la note de débit appliqués à cette facture</inlineHelpText>
    <label>Debits</label>
    <summarizedField>blng__InvoiceLine__c.blng__Debits__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>