force-app/main/default/objects/blng__Invoice__c/fields/blng__DueDate__c.field-meta.xml
<CustomField>
    <fullName>blng__DueDate__c</fullName>
    <description>When is the last date of invoice to be paid.</description>
    <inlineHelpText>La date à laquelle le paiement de la facture est dû.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>