force-app/main/default/objects/blng__Invoice__c/fields/blng__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDate__c</fullName>
    <inlineHelpText>Lance la date d&apos;échéance et la période de reporting financier</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>