force-app/main/default/objects/blng__Invoice__c/fields/blng__InvoicePostedDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoicePostedDate__c</fullName>
    <inlineHelpText>La date à laquelle la facture a été validée</inlineHelpText>
    <label>Invoice Posted Date</label>
    <type>Date</type>
</CustomField>