force-app/main/default/objects/blng__Invoice__c/fields/blng__PaymentProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentProcessStatus__c</fullName>
    <inlineHelpText>Ce champ sera déprécié dans une future version.</inlineHelpText>
    <label>Payment Process Status (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentRunStatus</valueSetName>
    </valueSet>
</CustomField>