force-app/main/default/objects/blng__Invoice__c/fields/blng__Payments__c.field-meta.xml
<CustomField>
    <fullName>blng__Payments__c</fullName>
    <formula>blng__PaymentsAgainstInvoice__c +  blng__PaymentsAgainstInvoiceLines__c - blng__RefundsAgainstInvoice__c - blng__RefundsAgainstInvoiceLines__c + blng__DebitPayments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Paiement nets contre cette facture</inlineHelpText>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>