force-app/main/default/objects/blng__Invoice__c/fields/blng__RefundsAgainstInvoice__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundsAgainstInvoice__c</fullName>
    <inlineHelpText>Annulations d’allocations précédentes à la facture</inlineHelpText>
    <label>Unallocations Against Invoice</label>
    <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Unallocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>