force-app/main/default/objects/blng__Invoice__c/fields/LPCR_AvoirTotal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvoirTotal__c</fullName>
    <description>montant avoir cummulé sur ligne de facture</description>
    <label>LPCR AvoirTotal</label>
    <summarizedField>blng__InvoiceLine__c.LPCR_MontantAvoirLigneFacture__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>