force-app/main/default/objects/blng__Invoice__c/fields/LPCR_AvoirTotalHT__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvoirTotalHT__c</fullName>
    <formula>LPCR_SoldeHorsTaxe__c + LPCR_MontantAvoirFacture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR AvoirTotalHT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>