force-app/main/default/objects/blng__Invoice__c/fields/LPCR_AvoirTotalHTLigne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvoirTotalHTLigne__c</fullName>
    <description>Montant total HT</description>
    <formula>LPCR_SoldeHorsTaxe__c + LPCR_AvoirTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR AvoirTotalHTLigne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>