force-app/main/default/objects/blng__Invoice__c/fields/LPCR_AvoirTotalNet__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvoirTotalNet__c</fullName>
    <formula>blng__Balance__c +LPCR_MontantAvoirFacture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR AvoirTotalNet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>