force-app/main/default/objects/blng__Invoice__c/fields/LPCR_AvoirTotalNetLigne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvoirTotalNetLigne__c</fullName>
    <formula>blng__Balance__c  +  LPCR_AvoirTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR AvoirTotalNetLigne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>