force-app/main/default/objects/blng__Invoice__c/fields/LPCR_Commentaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>150</length>
    <type>Text</type>
</CustomField>