force-app/main/default/objects/blng__Invoice__c/fields/LPCR_CommentaireGlobal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CommentaireGlobal__c</fullName>
    <label>Commentaire Global</label>
    <length>255</length>
    <type>Text</type>
</CustomField>