force-app/main/default/objects/blng__Invoice__c/fields/LPCR_CommentaireIndividuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CommentaireIndividuel__c</fullName>
    <label>Commentaire Individuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>