force-app/main/default/objects/blng__Invoice__c/fields/LPCR_CompteMoyenPaiement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteMoyenPaiement__c</fullName>
    <formula>TEXT(blng__Account__r.LPCR_MoyenPaiement__c)</formula>
    <label>LPCR_CompteMoyenPaiement</label>
    <type>Text</type>
</CustomField>