force-app/main/default/objects/blng__Invoice__c/fields/LPCR_CongesPrisPeriode__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CongesPrisPeriode__c</fullName>
    <label>Conges Pris Periode</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>