force-app/main/default/objects/blng__Invoice__c/fields/LPCR_ConversionLigneNegative__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ConversionLigneNegative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion ligne negative</label>
    <type>Checkbox</type>
</CustomField>