force-app/main/default/objects/blng__Invoice__c/fields/LPCR_DateDerniereModification__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDerniereModification__c</fullName>
    <label>Date de derniere modification</label>
    <type>Date</type>
</CustomField>