force-app/main/default/objects/blng__Invoice__c/fields/LPCR_DescriptionAvoirFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DescriptionAvoirFacture__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>