force-app/main/default/objects/blng__Invoice__c/fields/LPCR_IdExterne_Order__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Order__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>