force-app/main/default/objects/blng__Invoice__c/fields/LPCR_LiaisonFamilleFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LiaisonFamilleFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liaison famille facture</label>
    <type>Checkbox</type>
</CustomField>