force-app/main/default/objects/blng__Invoice__c/fields/LPCR_MethodesPaiement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MethodesPaiement__c</fullName>
    <label>Méthodes De Paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>Prélèvement</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Espèces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>