force-app/main/default/objects/blng__Invoice__c/fields/LPCR_MontantAfficheFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantAfficheFacture__c</fullName>
    <formula>IF(blng__Balance__c = 0, blng__TotalAmount__c , 
IF(AND(blng__Balance__c &gt; 0,blng__TotalAmount__c &lt;0), blng__TotalAmount__c,blng__Balance__c- blng__NegativeLineConversion__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant affiché facture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>