force-app/main/default/objects/blng__Invoice__c/fields/LPCR_MontantAvoirFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantAvoirFacture__c</fullName>
    <defaultValue>-0.1</defaultValue>
    <label>Montant avoir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>