force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NatureAvoirFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NatureAvoirFacture__c</fullName>
    <label>Nature de l’avoir</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.CT - Contrat</fullName>
            </value>
            <value>
                <fullName>A.CT - Résil</fullName>
            </value>
            <value>
                <fullName>A.CT - Annulation</fullName>
            </value>
            <value>
                <fullName>A.COM - Litige comm</fullName>
            </value>
            <value>
                <fullName>A.COM - Formulation client</fullName>
            </value>
            <value>
                <fullName>A.COM - Covid</fullName>
            </value>
            <value>
                <fullName>A.ADV - Erreur saisie</fullName>
            </value>
            <value>
                <fullName>A.ADV - MIB</fullName>
            </value>
            <value>
                <fullName>A.ADV - Doublon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>