force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NbHeuresRealise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NbHeuresRealise__c</fullName>
    <label>NbHeuresRealise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>