force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NomAvoir__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomAvoir__c</fullName>
    <label>Nom Avoir</label>
    <length>250</length>
    <type>Text</type>
</CustomField>