force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NombreJoursUtilisation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursUtilisation__c</fullName>
    <label>Nombre de jours utilisation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>