force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NombreLigneNegative__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreLigneNegative__c</fullName>
    <label>Nombre de lignes négatives</label>
    <summaryFilterItems>
        <field>blng__InvoiceLine__c.blng__TotalAmount__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>