force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NombrePOinvalides__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePOinvalides__c</fullName>
    <label>Nombre de PO invalides</label>
    <summaryFilterItems>
        <field>blng__InvoiceLine__c.LPCR_POInvalide__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>