force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NomCompletRepresentant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCompletRepresentant1__c</fullName>
    <description>dans le cas d&apos;une facture B2C nom complet du représentant 1 à faire apparaître sur la facture</description>
    <formula>blng__Account__r.LPCR_Representant1__r.FirstName &amp;&apos; &apos;&amp; blng__Account__r.LPCR_Representant1__r.LastName</formula>
    <inlineHelpText>dans le cas d&apos;une facture B2C nom complet du représentant 1 à faire apparaître sur la facture</inlineHelpText>
    <label>Nom complet Représentant 1</label>
    <type>Text</type>
</CustomField>