force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NomCompletRepresentant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCompletRepresentant2__c</fullName>
    <description>dans le cas d&apos;une facture B2C nom complet du représentant 2 à faire apparaître sur la facture</description>
    <formula>blng__Account__r.LPCR_Representant2__r.FirstName &amp;&apos; &apos;&amp; blng__Account__r.LPCR_Representant2__r.LastName</formula>
    <inlineHelpText>dans le cas d&apos;une facture B2C nom complet du représentant 2 à faire apparaître sur la facture</inlineHelpText>
    <label>Nom complet Représentant 2</label>
    <type>Text</type>
</CustomField>