force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NumeroCompteBancaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroCompteBancaire__c</fullName>
    <description>numéro de compte bancaire affiché sur les factures pour lesquels il y a un paiement par prélèvement automatique</description>
    <formula>IF(ISBLANK(blng__Account__r.LPCR_IBAN__c),NULL, &apos;XXX&apos;&amp;  RIGHT(blng__Account__r.LPCR_IBAN__c,4 ))</formula>
    <inlineHelpText>numéro de compte bancaire affiché sur les factures pour lesquels il y a un paiement par prélèvement automatique</inlineHelpText>
    <label>Numéro de compte bancaire</label>
    <type>Text</type>
</CustomField>