force-app/main/default/objects/blng__Invoice__c/fields/LPCR_NumeroFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroFacture__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Numéro de facture</label>
    <type>AutoNumber</type>
</CustomField>