force-app/main/default/objects/blng__Invoice__c/fields/LPCR_PeriodeAvoirFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PeriodeAvoirFacture__c</fullName>
    <label>Période</label>
    <type>Date</type>
</CustomField>