force-app/main/default/objects/blng__Invoice__c/fields/LPCR_PrixUnitaireAvoir__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixUnitaireAvoir__c</fullName>
    <label>Prix unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>