force-app/main/default/objects/blng__Invoice__c/fields/LPCR_Quantite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Quantite__c</fullName>
    <label>Quantité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>