force-app/main/default/objects/blng__Invoice__c/fields/LPCR_SocieteFacturante__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteFacturante__c</fullName>
    <formula>blng__Order__r.SBQQ__Quote__r.LPCR_SocieteFacturante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Société Facturante</label>
    <type>Text</type>
</CustomField>