force-app/main/default/objects/blng__Invoice__c/fields/LPCR_SoldeHorsTaxe__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SoldeHorsTaxe__c</fullName>
    <description>Sous total hors taxe affiché sur le document de facture</description>
    <formula>blng__Subtotal__c - blng__Credits__c +  blng__Debits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sous total hors taxe affiché sur le document de facture</inlineHelpText>
    <label>Solde hors taxe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>