force-app/main/default/objects/blng__Invoice__c/fields/LPCR_StatutAvoirFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutAvoirFacture__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>publié</fullName>
            </value>
            <value>
                <fullName>à envoyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>