force-app/main/default/objects/blng__Invoice__c/fields/LPCR_StatutFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutFacture__c</fullName>
    <label>Statut De La Facture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Prêt à valider</fullName>
            </value>
            <value>
                <fullName>A Envoyer</fullName>
            </value>
            <value>
                <fullName>Envoyée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Terminée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>