force-app/main/default/objects/blng__Invoice__c/fields/LPCR_StatutPaiement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutPaiement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statut Paiement</label>
    <type>Checkbox</type>
</CustomField>