force-app/main/default/objects/blng__Invoice__c/fields/LPCR_TauxTVA__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxTVA__c</fullName>
    <description>taux de TVA affiché sur le document de la facture</description>
    <formula>IF(blng__Subtotal__c=0,0, blng__TaxAmount__c /blng__Subtotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>