force-app/main/default/objects/blng__Invoice__c/fields/LPCR_TypeAvoir__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAvoir__c</fullName>
    <label>Type Avoir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Partiel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>