force-app/main/default/objects/blng__Invoice__c/fields/LPCR_TypeCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche__c</fullName>
    <label>Type de crèche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeCreche</valueSetName>
    </valueSet>
</CustomField>