force-app/main/default/objects/blng__Invoice__c/fields/Tech_FormuleCongaBatch__c.field-meta.xml
<CustomField>
    <fullName>Tech_FormuleCongaBatch__c</fullName>
    <description>champ technique utilisé pour la génération automatique des factures</description>
    <formula>&apos;&amp;Id=&apos;&amp;Id&amp;&apos;&amp;QueryId=[LineItems]a4J3O0000008RXg,[CompanyDets]a4J3O0000008RXi,[LigneBerceau]a4J3O0000008RXf&apos;
&amp;IF(NOT(ISBLANK(Tech_DateAttestationCAF__c)),&apos;,[AttestationCAF]a4J3O0000008WpA?pv0=&apos;&amp;blng__Account__c&amp;&apos;~pv1=&apos;&amp;TEXT(Tech_DateAttestationCAF__c),&apos;&apos;)&amp;&apos;,[CreditNotes]a4J3O0000008V1T,[DebitNotes]a4J3O0000008VX5&amp;TemplateId=&apos;&amp;IF( blng__Account__r.RecordType.DeveloperName=&apos;Famille&apos;,IF(AND(TEXT(blng__Account__r.LPCR_MoyenPaiement__c)=&apos;Virement&apos;,NOT(ISBLANK(blng__Account__r.LPCR_RIB__c))),&apos;a4R3O0000008T1F&apos;,&apos;a4R3O0000008T1H&apos;)&amp;IF(NOT(ISBLANK(Tech_DateAttestationCAF__c)),&apos;, a4R3O0000008T4P&apos;,&apos;&apos;),&apos;a4R3O0000008SwF&apos;)&amp;&apos;&amp;UF0=1&amp;MFTS0=LPCR_StatutFacture__c&amp;MFTSValue0=Envoyée&amp;SC0=1&amp;SC1=Attachments&apos;</formula>
    <label>Tech_Formule Conga Batch</label>
    <type>Text</type>
</CustomField>