force-app/main/default/objects/blng__Invoice__c/fields/Tech_MaxDateLigneBerceauFamille__c.field-meta.xml
<CustomField>
    <fullName>Tech_MaxDateLigneBerceauFamille__c</fullName>
    <description>Max end date sur les lignes de facture dont le nom contient ‘Accueil’. Utilisé pour la génération de la facture famille B2C.</description>
    <label>Tech_MaxDateLigneBerceauFamille</label>
    <summarizedField>blng__InvoiceLine__c.blng__EndDate__c</summarizedField>
    <summaryFilterItems>
        <field>blng__InvoiceLine__c.Name</field>
        <operation>contains</operation>
        <value>Accueil</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>