force-app/main/default/objects/blng__Invoice__c/fields/Tech_MinDateLigneBerceauFamille__c.field-meta.xml
<CustomField>
    <fullName>Tech_MinDateLigneBerceauFamille__c</fullName>
    <description>Min end date sur les lignes de facture dont le nom contient ‘Accueil’ ou &apos;Berceau&apos;. Utilisé pour la génération de l&apos;attestation CAF de la facture famille B2C</description>
    <inlineHelpText>Min end date sur les lignes de facture dont le nom contient ‘Accueil’ ou &apos;Berceau&apos;. Utilisé pour la génération de l&apos;attestation CAG de la facture famille B2C</inlineHelpText>
    <label>Tech_MinDateLigneBerceauFamille</label>
    <summarizedField>blng__InvoiceLine__c.blng__StartDate__c</summarizedField>
    <summaryFilterItems>
        <field>blng__InvoiceLine__c.Name</field>
        <operation>contains</operation>
        <value>Accueil,Berceau</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>